--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,8 @@ h1 {
 }
 
 #grid {
-    padding-left: 20%;
+    padding: auto;
+    margin-top: 10px;
     position: middle;
     display: inline-grid;
     grid-template-rows:    repeat(6,1fr);
@@ -37,6 +38,10 @@ h1 {
     background-image: url("https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/999/s300/flatironschool.png");
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+#status {
+    text-align: center;
 }
   
 .tile {
@@ -58,15 +63,18 @@ div.dice{
     padding: 10px;
     font-size: 24px;
     text-align: center;
-    margin: 5px;
+    margin: 10px;
 }
 
 .dieBtn{
     float: left;
     padding: 5px;
+    margin-left: 8px;
     border: #999 1px solid;
     border-radius: 20px;
 }
+
+
 
 
 
