--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ body {
     text-align:center;
 }
 
-body, h1,h2,h3,h4,h5,h6 {
+body,p,h1,h2,h3,h4,h5,h6 {
     font-family: 'Amatic SC', sans-serif;
     letter-spacing: 2px;
 }
@@ -34,7 +34,7 @@ h1 {
     grid-column: 2 / 6;
     border-radius: 15px;
     text-align: center;
-    border: 3px solid #757575;
+    border: 3px solid #333333;
     background-image: url("https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/999/s300/flatironschool.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,20 +45,33 @@ h1 {
 }
   
 .tile {
-    color: rgba(11, 79, 108, 1);
+    font-weight: bold;
+    font-size: 20px;
+    color: #333333;
     background-color: rgba(0, 179, 230, 1);
     border-radius: 15px;
     text-align: center;
-    border: 3px solid #757575;
+    border: 3px solid #333333;
     height: 100px;
     width: 100px;
 }
+
+.playerPiece {
+    margin-top: 10px;
+    height: 30px;
+    width: 30px;
+    background-color: #20BF55;
+    border: 1px solid #333333;
+    border-radius: 50%;
+    display: inline-grid;
+}
   
 div.dice{
+    font-weight: bold;
     float: center;
     width:32px;
     background: #f5f5f5;
-    border: #999 1px solid;
+    border: #333333 2px solid;
     border-radius: 20px;
     padding: 10px;
     font-size: 24px;
@@ -67,10 +80,11 @@ div.dice{
 }
 
 .dieBtn{
+    font-weight: bold;
     float: left;
     padding: 5px;
     margin-left: 8px;
-    border: #999 1px solid;
+    border: #333333 2px solid;
     border-radius: 20px;
 }
 
