--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,7 @@ h1 {
 
 #grid {
     padding: auto;
-    margin-top: 10px;
+    margin-top: 75px;
     position: middle;
     display: inline-grid;
     grid-template-rows:    repeat(6,1fr);
@@ -30,15 +30,47 @@ h1 {
 }
   
 .center-tile {
-    grid-row:    2 / 6;
+    
+    grid-row: 2 / 6;
     grid-column: 2 / 6;
     border-radius: 15px;
     text-align: center;
     border: 3px solid #333333;
-    background-image: url("https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/999/s300/flatironschool.png");
+    background-image: url("https://i.ibb.co/StN3gLL/logo.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.centerTextDisplay h4{
+    display: inline-grid;
+    font-size: 26px;
+}
+
+.centerTextDisplay h5{
+    font-size: 24px;
+}
+
+#center-text {
+    display: inline-grid;
+    font-size: 26px;
+}
+
+.notYetMsg {
+    font-size: 30px;
+    
+}
+
+#current-skills {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#coding-knowledge{
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
 
 #status {
     text-align: center;
@@ -52,8 +84,8 @@ h1 {
     border-radius: 15px;
     text-align: center;
     border: 3px solid #333333;
-    height: 100px;
-    width: 100px;
+    height: 125px;
+    width: 125px;
 }
 
 .playerPiece {
@@ -82,8 +114,8 @@ div.dice{
 .dieBtn{
     font-weight: bold;
     float: left;
+    margin-left: 5px;
     padding: 5px;
-    margin-left: 8px;
     border: #333333 2px solid;
     border-radius: 20px;
 }
@@ -109,6 +141,10 @@ div.dice{
 
 /* Landing Page Animation */
 
+.instructions{
+    font-size: 18px;
+    font-weight: bold;
+}
 .playBtn {
     font-size: 40px;
     font-weight: bold;
